crates/app/sdk/macros/tests/fail/multiple_init.stderr
error: Multiple #[init] functions are not allowed.
   --> tests/fail/multiple_init.rs:108:12
    |
108 |         fn another_initialize(
    |            ^^^^^^^^^^^^^^^^^^

warning: unused import: `init`
  --> tests/fail/multiple_init.rs:84:35
   |
84 | use evolve_macros::{account_impl, init};
   |                                   ^^^^
   |
   = note: `#[warn(unused_imports)]` on by default
